tests/bad/func_redef.oc
/// fail: Name foo already exists in scope

def foo(): i32 { }
def foo(): bool { }